# curly-engine

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Readme.md  build.rs  package-lock.json  package.json
client/: package-lock.json  package.json
client/src/: App.js
src/: app.rs  configs.rs  constants.rs  daos.rs  main.rs  models.rs  service.rs
src/api/: user_api.rs
src/config/: cors.rs  db.rs  loader.rs  mod.rs
src/configs/: database.rs  repository.rs  settings.rs
src/daos/: customer_dao.rs  customer_repo.rs  dao_container.rs  signup_dao.rs
src/grpc/: mod.rs  service.proto
src/models/: customer_model.rs  mod.rs  signup_model.rs  user_model.rs
src/payload/: mod.rs  signup_payload.rs
src/repository/: mod.rs  mongodb_repo.rs  user_repo.rs
src/services/: auth.rs  signup.rs
src/utils/: errorMessage.util.js
