[package]
name = "talkmoni_sso"
version = "0.1.0"
edition = "2021"

authors = ["infinexpartners"]
keywords = ["sso", "talkmoni", "identity_management"]

description = "Secure and Simplified Identity Access Management"
repository = "https://git-codecommit.eu-west-2.amazonaws.com/v1/repos/talkmoni_sso"

[dependencies]
actix-web = "4.4.0"
dotenv = "0.15.0"
serde = { version = "1.0.189", features = ["derive"] }

[dependencies.mongodb]
version = "2.7.0"
default-features = false
features = ["async-std-runtime"]
