[package]
name = "talkmoni_sso"
version = "0.1.0"
edition = "2021"

authors = ["infinexpartners"]
keywords = ["sso", "talkmoni", "identity_management"]

description = "Secure and Simplified Identity Access Management"
repository = "https://git-codecommit.eu-west-2.amazonaws.com/v1/repos/talkmoni_sso"

[dependencies]
actix-web = "4.4.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.20"


[dependencies.serde]
version = "1.0.189"
features = ["derive"]

[dependencies.mongodb]
version = "2.7.0"
default-features = false
features = ["tokio-runtime"]
