[package]
name = "talkmoni_sso"
version = "0.1.0"
edition = "2021"

authors = ["infinexpartners"]
keywords = ["sso", "talkmoni", "identity_management"]

description = "Secure and Simplified Identity Access Management"
repository = "https://git-codecommit.eu-west-2.amazonaws.com/v1/repos/talkmoni_sso"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
dotenv = "0.15.0"


[dependencies.chrono]
version = "0.4.31"
features = ["serde"]

[dependencies.mongodb]
version = "2.7.0"
default-features = false
features = ["tokio-runtime"]

[dependencies.serde]
version = "1.0.189"
features = ["derive"]

[dependencies.uuid]
version = "1.5.0"
features = ["serde", "v4"]
